--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -3,5 +3,5 @@ body {
 }
 
 h1 {
-    color: #ff6e63;
+    color: var(--color-danger);
 }
